add download Storage support

--- a/static/index.html
+++ b/static/index.html
@@ -25,10 +25,10 @@
 		</ol>
 	</div>
 
-	<div class="DownloadList">
-		<p>Download List:</p>
+	<div class="DownloadedList">
+		<p>Downloaded List:</p>
 		<!-- TODO: enable delete -->
-		<ol id="DownloadList">
+		<ol id="DownloadedList">
 		</ol>
 	</div>
 
