add Transmission command

--- a/static/index.html
+++ b/static/index.html
@@ -43,6 +43,8 @@
 		</form>
 		</br>
 		<button onclick="reloadStorage()">Reload Storage...</button>
+		</br>
+		<a href="https://localhost:9091">Transmission Client</a>
 	</div>
 
 	<div class="DownloadedList">
